--- a/_config.yml
+++ b/_config.yml
@@ -115,9 +115,7 @@ content:
   - title: A Little More About Me
     layout: text
     content: |
-      This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
-      Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
+      In my free time I like to travel whenever possible. I also try to tinker tech things, like to invest myself in learning new technologies and follow IT trends so that I keep up to date with the industry and the market.
 
 # Footer
 footer_show_references: false
